Bug 346249 - Kompare don't remember settings and lastest comparing files
Summary: Kompare don't remember settings and lastest comparing files
Status: RESOLVED FIXED
Alias: None
Product: kompare
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kompare bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-16 06:24 UTC by fademind
Modified: 2017-03-18 12:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fademind 2015-04-16 06:24:16 UTC
Kompare don't remember changed settings and don't remember lastest used files to comparing.


Reproducible: Always

Steps to Reproduce:
1. Comparing selected files
2. Close app.
3. Launch app. Fields path are empty.


Expected Results:  
Kompare don't remember lastest used files to comparing and settings (custom path to diff app). 

App should remember custom settings and lastest used files to comparing. Like was in previous release.
Comment 1 Mladen 2015-04-20 12:03:26 UTC
Happens to me, too. Arch Linux packages, also.
Comment 2 John Salatas 2017-03-18 12:21:45 UTC
Git commit 4b292e07f08d116f7f12278497210adebe86b8c8 by John Salatas.
Committed on 18/03/2017 at 12:20.
Pushed by jsalatas into branch 'master'.

Fix Kompare not remembering settings and latest compared files

Differential Revision: https://phabricator.kde.org/D5095

M  +11   -7    kompareurldialog.cpp
M  +3    -2    kompareurldialog.h
M  +6    -0    libdialogpages/filespage.cpp

https://commits.kde.org/kompare/4b292e07f08d116f7f12278497210adebe86b8c8