Fix Kompare not remembering settings and latest compared files

BUG: 346249

Differential Revision: https://phabricator.kde.org/D5095